tests/invalid/backend_cpp_line_mapping_native_name.wio
@Native
@CppName(definitely_missing_namespace::MissingCall)
fn MissingCall() -> i32;

fn Entry() -> i32 {
    return MissingCall();
}
